<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     
    <item android:id="@+id/menuMyBots"
          android:title="@string/myBots" />
 
    <item android:id="@+id/menuWar"
          android:title="Chat Bot Wars" />
    
    <item android:id="@+id/menuSearch"
          android:title="Search" />
    
    <item android:id="@+id/menuSignIn"
          android:title="@string/signIn" />
    
    <item android:id="@+id/menuSignUp"
          android:title="@string/signUp" />
    
    <item android:id="@+id/menuSignOut"
          android:title="@string/signOut" />
    
    <item android:id="@+id/menuViewUser"
          android:title="@string/viewProfile" />
    
    <item android:id="@+id/menuEditUser"
          android:title="@string/editProfile" />
    
    <item android:id="@+id/menuWebsite"
          android:title="@string/website" />
	  
    <item android:id="@+id/menuChangeLanguage"
          android:title="Change Language" />
    
    <item android:id="@+id/menuHelp"
          android:title="Help" />
     
</menu>